--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,19 +12,19 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
+          cache: "npm"
 
-      - name: Install dependencies
-        run: npm ci
-
-      # ❌ Lint step removed
-      # - name: Run lint
-      #   run: npm run lint
+      # Fix Rollup optional dependency issue
+      - name: Clean install
+        run: |
+          rm -rf node_modules package-lock.json
+          npm install --prefer-online
 
       - name: Run tests (if exists)
         run: npm run test --if-present
